Fix for cpganalysisserver#135 : EHCache needs deep reflective access to estimate cache size of objects. From Java 9, this requires explicitly granting access to jdk.internal.access